--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -13,14 +13,14 @@ body {
   background-color: #ffffff;
   opacity: 100%;
   display: flex;
-  align-items: center;
+  align-items:center;
   justify-content: center;
 }
 
 button {
   padding: 20px;
   color: #ffffff;
-  background-color: #0e79dd;
+  background-color: #0ebedd;
   border: none;
   border-radius: 5px;
   font-weight: 600;
@@ -48,7 +48,7 @@ button {
   pointer-events: none;
   position: fixed;
   inset: 0;
-  background: #000;
+  background: #000000;
   opacity: 0%;
 }
 
