--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,13 +2,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para, .text.child{
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  font-weight: 1000;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
   font-weight: 800;
 }
@@ -17,19 +16,19 @@ body {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
+#confirm-button {
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
+.button.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  font-size: 20px;
+
 }
 
-.child {
+.div .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
@@ -37,6 +36,6 @@ body {
 
 div.text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
+  font-size: 16px;
   font-weight: 100;
 }
