--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -22,20 +22,20 @@ body {
   font-weight: bold;
 } 
 
-.button.cancel {
+button.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
 
 }
 
-.div .child {
+body .text {
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: 100;
+}
+
+div .text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 16px;
-  font-weight: 100;
 }
